tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_n_after_toggling_single_file_off_cycles_globally.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 36,
    top_line: 5,
    active_file: None,
    tree_visible: true,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "",
    full_context: false,
}
