tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_s_still_toggles_single_file.snap
---
source: gd/src/pager/tests/reducer.rs
assertion_line: 555
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 0,
    top_line: 0,
    active_file: None,
    tree_visible: false,
    visual_anchor: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "All files",
    full_context: false,
}
