tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_s_toggles_off_single_file.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "All files",
    full_context: false,
}
