tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_s_toggles_on_single_file.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: Some(
        0,
    ),
    tree_visible: true,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "Single file",
    full_context: false,
}
