tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_u_at_first_hunk_is_noop.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 6,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Hunk 1/6 · a.rs",
    full_context: false,
    visual_anchor: 0,
}
