tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_u_half_page_up.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 4,
    top_line: 0,
    active_file: None,
    tree_visible: false,
    mark_line: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "",
    full_context: false,
}
